# slot-machine

./: .gitignore  CMakeLists.txt  README.md
Source/: Application.cpp  Application.hpp  CMakeLists.txt  Config.cpp  Config.hpp  Utils.hpp  main.cpp
Source/Buttons/: CMakeLists.txt
Source/Buttons/Events/: ButtonEvent.hpp  CMakeLists.txt  EButtonAction.hpp  EButtonType.hpp
Source/Buttons/Input/: ButtonInput.cpp  ButtonInput.hpp  CMakeLists.txt
Source/Events/: CMakeLists.txt  EEventType.hpp  EventQueue.cpp  EventQueue.hpp  IEvent.hpp
Source/Events/Implementations/: ButtonEvent.hpp  StateChangedEvent.hpp
Source/Slots/: CMakeLists.txt  ESlotType.hpp  SlotMachine.cpp  SlotMachine.hpp  SlotRow.cpp  SlotRow.hpp
Source/States/: CMakeLists.txt  EStateName.hpp  IState.hpp
Source/States/Implementations/: IdleState.cpp  IdleState.hpp  ShowResultsState.cpp  ShowResultsState.hpp  SpinState.cpp  SpinState.hpp  StartSpinState.cpp  StartSpinState.hpp  StopSpinState.cpp  StopSpinState.hpp
Source/Window/: CMakeLists.txt  IWindow.hpp
src/: Application.cpp  Application.hpp  CMakeLists.txt  Utils.hpp  main.cpp
src/Buttons/Events/: ButtonEvent.cpp  ButtonEvent.hpp
src/Buttons/Input/: ButtonInput.cpp  ButtonInput.hpp  EButtonAction.hpp  EButtonType.hpp
src/Slots/: CMakeLists.txt  ESlotType.hpp  Slot.cpp  Slot.hpp  SlotMachine.cpp  SlotMachine.hpp  SlotRow.cpp  SlotRow.hpp  SlotRows.cpp  SlotRows.hpp
src/States/: CMakeLists.txt  IState.hpp
src/States/Implementations/: IdleState.cpp  IdleState.hpp  SpinState.cpp  SpinState.hpp  (+4 more)
src/Window/: CMakeLists.txt  IWindow.hpp
(+15 files in other folders)
